@@ -1,0 +1,4 @@
+rootProject.name = "cassandra-sidecar"
+
+include "docs"
+
